# YuvSample

./: README.md  gradle.properties
app/: build.gradle  maven-publish.gradle
app/src/androidTest/java/com/harvey/libyuv/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  YuvUtil.cpp  YuvUtil.h
app/src/main/cpp/libyuv/: Android.mk
app/src/main/java/com/avatarcn/yuv/: YuvUtil.java
app/src/main/java/com/harvey/libyuv/: MainActivity.java
app/src/main/java/com/harvey/yuv/: MainActivity.java  YuvUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/harvey/libyuv/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
